--- a/src/ScrollText/ScrollText.css
+++ b/src/ScrollText/ScrollText.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,900');
 .scrolling{
   grid-column: 1/6;
+  grid-row: 1;
   width: 100%;
   height: 100%;
   background-color: #374157;
@@ -18,7 +19,7 @@
   /* This sets allows us to transform the text on a 3D plane, and is somewhat a magic number */
   perspective: 400px;
   /* The rest is totally up to personal styling preferences */
-  color: #9299A3;
+  color: #72696D;
   font-family: 'Lato', sans-serif;
   font-size: 500%;
   font-weight: 900;
